container/00_base/react-web/deployments/k8s_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-web
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /react-web/dev/
        pathType: Prefix
        backend:
          service: { name: "react-web", port: { number: 3102 } }

      - path: /react-web/test/
        pathType: Prefix
        backend:
          service: { name: "react-web-test", port: { number: 3103 } }
